fix (tabbar): selection indicator was not visible

--- a/packages/ketchup-lite/src/components/kul-tabbar/styles/kul-tabbar-main.scss
+++ b/packages/ketchup-lite/src/components/kul-tabbar/styles/kul-tabbar-main.scss
@@ -180,7 +180,7 @@
         border-top-style: solid;
         border-top-width: 2px;
         box-sizing: border-box;
-        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
+        transition: all 125ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
         width: 100%;
       }
     }
